# flow_benchmark_tools

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-examples.txt  requirements.txt
data/: criteria_benchmark.jsonl  rag_benchmark.jsonl
data/files/: Jane_Gilbert_resume.docx
src/examples/: criteria_evaluation_agent.py  langchain_rag_agent.py  openai_assistant_agent.py
src/recursiveai/benchmark/: __init__.py
src/recursiveai/benchmark/_internal/: _benchmark_evaluator.py  _benchmark_output.py  _criteria_evaluator.py  _evaluation.py  _run_output.py
src/recursiveai/benchmark/_internal/_evaluators/: __init__.py  _happy.py  _llm_criteria_judge.py  _llm_criteria_jury.py  _llm_judge.py  _llm_jury.py  _regex_match.py  _strict_match.py
src/recursiveai/benchmark/_internal/_llm/: _anthropic_claude_model.py  _azure_openai_gpt_model.py  _google_gemini_model.py  _llm_model.py  _openai_gpt_model.py
src/recursiveai/benchmark/_internal/_metrics/: _benchmark_metrics.py  _run_metrics.py
src/recursiveai/benchmark/_internal/_util/: __init__.py
src/recursiveai/benchmark/api/: __init__.py  benchmark.py  benchmark_agent.py  benchmark_case.py  benchmark_evaluator.py  benchmark_run.py  benchmark_runner.py  exit_code.py
src/recursiveai/benchmark/api/agents/: __init__.py  async_callback_agent.py  callback_agent.py
src/recursiveai/benchmark/api/util/: __init__.py
src/tests/: conftest.py
src/tests/api/: conftest.py  test_agents.py  test_benchmarks.py  test_runner.py
src/tests/internal/: test_anthropic.py  test_azure.py  test_evaluators.py  test_google.py  test_metrics.py  test_openai.py  test_util.py
