[build-system]
requires = ["setuptools>=70.3.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-benchmark-tools"
version = "1.2.0"
description = "A library containing LLM benchmarking tools"
readme = "README.md"
requires-python=">=3.8,<3.12"
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
homepage = "https://github.com/recursiveai/flow_benchmark_tools"

[tool.setuptools.packages.find]
where = ["src"]
include = ["recursiveai*"]
namespaces = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
optional-dependencies.pub = {file = ["requirements-pub.txt"]}
optional-dependencies.examples = {file = ["requirements-examples.txt"]}

[tool.pytest.ini_options]
addopts = "-ra -q -vv --cov=recursiveai"
testpaths = ["src/tests"]

[tool.pylint.MASTER]
disable = ["C0114", "C0115", "C0116"]
extension-pkg-allow-list = "pydantic"
generated-members = ["numpy.*", "torch.*"]
ignore-paths = ["src/tests"]

[tool.bandit]
exclude_dirs = ["src/tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src"]
stubPath = ""
